plugins {
    id 'java'
}

archivesBaseName = rootProject.archives_base_name + "-" + project.name
version = rootProject.mod_version
group = rootProject.maven_group

repositories {
    mavenCentral()
}

dependencies {
    compileOnly "org.apache.logging.log4j:log4j-core:2.20.0"
    compileOnly "com.google.code.gson:gson:2.10.1"
}

sourceCompatibility = JavaVersion.VERSION_17
targetCompatibility = JavaVersion.VERSION_17

tasks.withType(JavaCompile) {
    options.encoding = "UTF-8"
}

java {
    withSourcesJar()
}
